# ocr

./: CLAUDE.md  README.md  ocr.py  pyproject.toml
